# Real2Sim_ROS_Doosan

./: .gitmodules  01_build_image.sh  02_run_container.sh  Commands  Commands.txt  Commands_guide.md  Dockerfile  README.md
Projects/src/RL_environment/: CMakeLists.txt  package.xml
Projects/src/RL_environment/scripts/: CMAB.py  CMAB_train.py  ContextRL.py  ENV_class.py  RL_class.py  Realsense_projection.py  build_gym_environment.py  camil.py  checkpoint_manager.py  main_rl_environment.py  run_environment.py  simulate_environment.py  trajectory_generator.py
Projects/src/RL_environment/scripts/dataset_config/: suola_1.txt  suola_11.txt  suola_12.txt  suola_16.txt  suola_17.txt  suola_18.txt  suola_2.txt  suola_20.txt  suola_21.txt  suola_22.txt  suola_23.txt  suola_24.txt  suola_25.txt  suola_4.txt  suola_5.txt  suola_6.txt  suola_7.txt  suola_8.txt
Projects/src/doosan-robot/sole/: CMakeLists.txt  package.xml
Projects/src/doosan-robot/sole/description/: sole.urdf.xacro  sole_ 6.urdf.xacro  sole_ 7.urdf.xacro  sole_1.urdf.xacro  sole_10.urdf.xacro  sole_11.urdf.xacro  sole_12.urdf.xacro  sole_13.urdf.xacro  sole_14.urdf.xacro  sole_15.urdf.xacro  sole_16.urdf.xacro  sole_17.urdf.xacro  sole_18.urdf.xacro  sole_19.urdf.xacro  sole_2.urdf.xacro  sole_20.urdf.xacro  sole_21.urdf.xacro  sole_22.urdf.xacro  sole_23.urdf.xacro  sole_24.urdf.xacro  sole_25.urdf.xacro  sole_3.urdf.xacro  sole_4.urdf.xacro  sole_5.urdf.xacro  sole_6.urdf.xacro  sole_7.urdf.xacro  sole_8.urdf.xacro  sole_9.urdf.xacro
Projects/src/doosan-robot/sole/description/urdf/: sole_1.urdf  sole_10.urdf  sole_11.urdf  sole_12.urdf  sole_13.urdf  sole_14.urdf  sole_15.urdf  sole_16.urdf  sole_17.urdf  sole_18.urdf  sole_19.urdf  sole_2.urdf  sole_20.urdf  sole_21.urdf  sole_22.urdf  sole_23.urdf  sole_24.urdf  sole_25.urdf  sole_3.urdf  sole_4.urdf  (+5 more)
Projects/src/doosan-robot/sole/launch/: sole.launch  sole_1.launch  sole_10.launch  sole_11.launch  sole_12.launch  sole_13.launch  sole_14.launch  sole_15.launch  sole_16.launch  sole_17.launch  sole_18.launch  sole_19.launch  sole_2.launch  sole_20.launch  sole_21.launch  sole_22.launch  sole_23.launch  sole_24.launch  sole_25.launch  sole_3.launch  sole_4.launch  sole_5.launch  sole_6.launch  sole_7.launch  sole_8.launch  sole_9.launch
Projects/src/doosan-robot/sole/meshes/: sole.stl  sole_1.stl  sole_10.stl  sole_11.stl  sole_12.stl  sole_13.stl  sole_14.stl  sole_15.stl  sole_16.stl  sole_17.stl  sole_18.stl  sole_19.stl  sole_2.stl  sole_20.stl  sole_21.stl  sole_22.stl  sole_23.stl  sole_24.stl  sole_25.stl  sole_3.stl  sole_4.stl  sole_5.stl  sole_6.stl  sole_7.stl  sole_8.stl  sole_9.stl
Projects/src/learn_to_see/: CMakeLists.txt  package.xml
Projects/src/learn_to_see/scripts/: learn_to_see.py  run_learn_to_see.py
(+1854 files in other folders)
