<?xml version="1.0"?>
<package format="2">
  <name>RL_environment</name>
  <version>1.2.0</version>
  <description>The Rl environment package</description>

  <author email="taffi98.at@gmail.com">Alessandra Tafuro</author>
  <maintainer email="taffi98.at@gmail.com">Alessandra Tafuro</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
