<?xml version="1.0"?>
<package format="2">
  <name>sole</name>
  <version>1.2.0</version>
  <description>The sole package</description>

  <author email="taffi98.at@gmail.com">Alessandra Tafuro</author>
  <maintainer email="taffi98.at@gmail.com">Alessandra Tafuro</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

</package>
